Revision history for perl distribution Convos

0.99_25 Not Released
 - Fix sending server messages to the right dialog
 - Fix joining a dialog by clicking on the dialog name
 - Fix first shown channel shows all users inactive #321
 - Fix creating dialog on /QUERY
 - Add better handling of "create dialog" errors
 - Add functionality to only enrich visible links
 - Add better "rich link" caching

0.99_24 2017-01-29T00:57:30+0100
 - Fix registration process
 - Fix being able to show profile + help during wizard
 - Fix width of embedded youtube videos on small screens
 - Fix zooming images inline in chat
 - Fix not matching markdown, because a link was injected
 - Fix "/me message your_nick" mention rendering
 - Fix markdown rendering
 - Improved materialbox rendering for huge images
 - Can send/receive any IRC message #317
 - Add "esc key" to close on materialbox
 - Add listing of available rooms to "Join dialog..." #309

0.99_23 2017-01-13T23:05:39+0100
 - Fix adding notifications in frontend
 - Fix saving userinfo in connection URL
 - Will close dropdown when clicking outside of the dropdown
 - Will ask for password if channel has mode +k

0.99_22 2017-01-10T23:32:19+0100
 - Fix use of CONVOS_ORGANIZATION_URL #307
 - Fix unread count should not be increased on join/part/quit/... messages
 - Fix going from "disconnected" to "reconnect" on connection save
 - Add connection state selector to connection editor
 - Change "Profile" to open in main dialog area
 - Change "Help" to open in main dialog area
 - Compatible with Mojolicious 7.15
 - Tweaking colors

0.99_21 2017-01-08T14:41:21+0100
 - Fix race condition when creating the websocket connection
 - Fix setting main dialog location on initial load
 - Fix not showing unread count for active channel
 - Fix sending "/names" on join #303
 - Fix parsing "/names" response #308
 - Add support for CONVOS_ORGANIZATION_URL #307
 - Add "get_user" websocket method

0.99_20 2016-12-29T21:00:43+0100