@@ -539,25 +539,26 @@ sub _event_notice {
 sub _event_privmsg {
   my ($self, $msg) = @_;
   my ($nick, $user, $host) = IRC::Utils::parse_user($msg->{prefix} || '');
-  my ($from, $highlight, $target);
+  my ($from, $highlight, $is_private, $target);
 
   # http://www.mirc.com/colors.html
   $msg->{params}[1] =~ s/\x03\d{0,15}(,\d{0,15})?//g;
   $msg->{params}[1] =~ s/[\x00-\x1f]//g;
 
   if ($user) {
-    my $is_private = $self->_is_current_nick($msg->{params}[0]);
-    $highlight = $is_private;
-    $target    = $is_private ? $nick : $msg->{params}[0];
-    $target    = $self->get_dialog($target) || $self->dialog({name => $target});
-    $from      = $nick;
+    $is_private = $self->_is_current_nick($msg->{params}[0]);
+    $target     = $is_private ? $nick : $msg->{params}[0];
+    $target     = $self->get_dialog($target) || $self->dialog({name => $target});
+    $from       = $nick;
   }
 
   $target ||= $self->messages;
   $from   ||= $self->id;
 
-  $highlight ||= grep { $msg->{params}[1] =~ /\b\Q$_\E\b/i } $self->_irc->nick,
-    @{$self->url->query->every_param('highlight')};
+  unless ($is_private) {
+    $highlight ||= grep { $msg->{params}[1] =~ /\b\Q$_\E\b/i } $self->_irc->nick,
+      @{$self->url->query->every_param('highlight')};
+  }
 
   $target->last_active(Mojo::Date->new->to_datetime);
 
