@@ -5,6 +5,7 @@ Revision history for perl distribution Convos
  - Fix joining a dialog by clicking on the dialog name
  - Fix first shown channel shows all users inactive #321
  - Fix creating dialog on /QUERY
+ - Fix private messages will not result in "highlight" event
  - Add better handling of "create dialog" errors
  - Add functionality to only enrich visible links
  - Add better "rich link" caching
